--- a/auraly.html
+++ b/auraly.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="icons/adaptive-favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="icons/icons8-logo-50.svg" />
     <title>Auraly</title>
     <link rel="stylesheet" href="auraly.css" />
-    <link rel="icon" type="image/svg+xml" href="../icons/icons8-logo-500.svg" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
@@ -18,7 +19,7 @@
   <body>
     <nav class="navbar">
       <div class="nav-logo">
-        <img src="../icons/icons8-logo-500.svg" alt="Auraly Logo" />
+        <img src="icons/icons8-logo-500.svg" alt="Auraly Logo" />
         <span>Auraly</span>
       </div>
       <div class="hamburger">
