--- a/terms.html
+++ b/terms.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="icons/adaptive-favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="icons/icons8-logo-50.svg">
     <title>Terms of Service - Auraly</title>
     <link rel="stylesheet" href="auraly.css" />
     <link rel="icon" type="image/svg+xml" href="../icons/icons8-logo-500.svg" />
