--- a/auraly.html
+++ b/auraly.html
@@ -167,12 +167,24 @@
       <p data-aos="fade-up">
         Download Auraly now and transform your music experience.
       </p>
-      <div class="download-buttons" data-aos="fade-up">
-        <a href="#" class="download-button">
-          <img src="images/app-store.png" alt="Download on App Store" />
-        </a>
-        <a href="#" class="download-button">
-          <img src="images/play-store.png" alt="Get it on Play Store" />
+      <div class="cta-buttons2">
+        <a href="#download" class="cta-button download-btn">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+            <polyline points="7 10 12 15 17 10"></polyline>
+            <line x1="12" y1="15" x2="12" y2="3"></line>
+          </svg>
+          Download App
         </a>
       </div>
     </section>
