--- a/privacy.html
+++ b/privacy.html
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy - Auraly</title>
     <link rel="stylesheet" href="auraly.css" />
-    <link rel="icon" type="image/svg+xml" href="../icons/icons8-logo-500.svg" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="icon" type="image/svg+xml" href="icons/adaptive-favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="icons/icons8-logo-50.svg" />
   </head>
   <body>
     <nav class="navbar">
       <div class="nav-logo">
         <a href="auraly.html">
-          <img src="../icons/icons8-logo-500.svg" alt="Auraly Logo" />
+          <img src="icons/icons8-logo-500.svg" alt="Auraly Logo" />
           <span>Auraly</span>
         </a>
       </div>
