--- a/search.html
+++ b/search.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/svg+xml" href="../icons/icons8-logo-500.svg" />
+    <link rel="icon" type="image/svg+xml" href="icons/adaptive-favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="icons/icons8-logo-50.svg" />
 
     <title>Auraly -music player</title>
   </head>
