--- a/terms.html
+++ b/terms.html
@@ -3,21 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="icons/adaptive-favicon.svg">
-    <link rel="icon" type="image/svg+xml" href="icons/icons8-logo-50.svg">
+    <link rel="icon" type="image/svg+xml" href="icons/adaptive-favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="icons/icons8-logo-50.svg" />
     <title>Terms of Service - Auraly</title>
     <link rel="stylesheet" href="auraly.css" />
-    <link rel="icon" type="image/svg+xml" href="../icons/icons8-logo-500.svg" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <nav class="navbar">
       <div class="nav-logo">
         <a href="auraly.html">
-          <img src="../icons/icons8-logo-500.svg" alt="Auraly Logo" />
+          <img src="icons/icons8-logo-500.svg" alt="Auraly Logo" />
           <span>Auraly</span>
         </a>
       </div>
