--- a/auraly.html
+++ b/auraly.html
@@ -158,6 +158,11 @@
           <div class="showcase-image">
             <img src="../screenshots/songlist.png" alt="Auraly Song List" />
           </div>
+          <h3>smart song list</h3>
+          <p>
+            Our smart song list features Automatically curated playlists based
+            on your listening habits.
+          </p>
         </div>
       </div>
     </section>
