--- a/artish/nepaliplaylist.html
+++ b/artish/nepaliplaylist.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="icons/adaptive-favicon.svg" />
-    <link rel="icon" type="image/svg+xml" href="icons/icons8-logo-50.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="../icons/adaptive-favicon.svg"
+    />
+    <link rel="icon" type="image/svg+xml" href="../icons/icons8-logo-50.svg" />
     <link rel="stylesheet" href="styles.css" />
     <title>nepali Playlist</title>
   </head>
