--- a/search.html
+++ b/search.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/svg+xml" href="icons/adaptive-favicon.svg" />
     <link rel="icon" type="image/svg+xml" href="icons/icons8-logo-50.svg" />
-
     <title>Auraly -music player</title>
   </head>
   <body>
@@ -76,7 +75,7 @@
       }
     </script>
     <div class="app-logo" onclick="showSection('home')">
-      <img src="../icons/icons8-logo-500.svg" alt="Auraly Logo" />
+      <img src="icons/adaptive-favicon.svg" alt="Auraly Logo" />
     </div>
     <div class="container">
       <div id="homeSection" class="home-section">
