--- a/search.html
+++ b/search.html
@@ -105,19 +105,19 @@
           </p>
 
           <div class="playlist-categories">
-            <a href="../artish/nepaliplaylist.html" class="playlist-category">
+            <a href="/artish/nepaliplaylist.html" class="playlist-category">
               <i class="fas fa-mountain"></i>
               <span>Nepali Vibes</span>
             </a>
-            <a href="../artish/country-playlist.html" class="playlist-category">
+            <a href="/artish/country-playlist.html" class="playlist-category">
               <i class="fas fa-guitar"></i>
               <span>Country Roads</span>
             </a>
-            <a href="../artish/uk-playlist.html" class="playlist-category">
+            <a href="/artish/uk-playlist.html" class="playlist-category">
               <i class="fas fa-crown"></i>
               <span>British Beats</span>
             </a>
-            <a href="../artish/hip-hop.html" class="playlist-category">
+            <a href="/artish/hip-hop.html" class="playlist-category">
               <i class="fas fa-record-vinyl"></i>
               <span>Hip Hop Heat</span>
             </a>
