--- a/auraly.html
+++ b/auraly.html
@@ -91,8 +91,12 @@
       <div class="feature-grid">
         <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
           <div class="feature-icon">🎵</div>
-          <h3>Smart Playlists</h3>
-          <p>Automatically curated playlists based on your listening habits.</p>
+          <h3>Creator's Collection</h3>
+          <p>
+            Discover handpicked playlists featuring my personal favorite songs
+            from around the world - a curated musical journey through my
+            collection.
+          </p>
         </div>
         <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
           <div class="feature-icon">🎨</div>
