--- a/auraly.html
+++ b/auraly.html
@@ -41,7 +41,7 @@
           intelligent music player.
         </p>
         <div class="cta-buttons">
-          <a href="#download" class="cta-button download-btn">
+          <a href="#download" class="cta-button download-btn" data-hover="Get the full experience">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -59,7 +59,7 @@
             </svg>
             Download App
           </a>
-          <a href="search.html" class="cta-button web-btn">
+          <a href="search.html" class="cta-button web-btn" data-hover="Try it in your browser">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -177,7 +177,7 @@
         Download Auraly now and transform your music experience.
       </p>
       <div class="cta-buttons2">
-        <a href="#download" class="cta-button download-btn">
+        <a href="#download" class="cta-button download-btn" data-hover="Get the full experience">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
