--- a/auraly.html
+++ b/auraly.html
@@ -41,7 +41,11 @@
           intelligent music player.
         </p>
         <div class="cta-buttons">
-          <a href="#download" class="cta-button download-btn" data-hover="Get the full experience">
+          <a
+            href="#download"
+            class="cta-button download-btn"
+            data-hover="Get the full experience"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -59,7 +63,11 @@
             </svg>
             Download App
           </a>
-          <a href="search.html" class="cta-button web-btn" data-hover="Try it in your browser">
+          <a
+            href="search.html"
+            class="cta-button web-btn"
+            data-hover="Try it in your browser"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -177,7 +185,11 @@
         Download Auraly now and transform your music experience.
       </p>
       <div class="cta-buttons2">
-        <a href="#download" class="cta-button download-btn" data-hover="Get the full experience">
+        <a
+          href="#download"
+          class="cta-button download-btn"
+          data-hover="Get the full experience"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
@@ -201,7 +213,7 @@
     <footer>
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="../icons/icons8-logo-500.svg" alt="Auraly Logo" />
+          <img src="icons/icons8-logo-50.svg" alt="Auraly Logo" />
           <span>Auraly</span>
         </div>
         <div class="footer-links">
