--- a/privacy.html
+++ b/privacy.html
@@ -89,7 +89,7 @@
     <footer>
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="../icons/icons8-logo-500.svg" alt="Auraly Logo" />
+          <img src="icons/icons8-logo-50.svg" alt="Auraly Logo" />
           <span>Auraly</span>
         </div>
         <div class="footer-links">
