--- a/auraly.html
+++ b/auraly.html
@@ -90,7 +90,10 @@
         </div>
       </div>
       <div class="hero-image" data-aos="fade-left">
-        <img src="../screenshots/app-preview.png" alt="Auraly App Preview" />
+        <img
+          src="/app scrennshots/Neutral Beige Aesthetic Fashion Mockup Instagram Story.png"
+          alt="Auraly App Preview"
+        />
       </div>
     </header>
 
@@ -134,12 +137,6 @@
           we're revolutionizing the way you experience music.
         </p>
       </div>
-      <div class="about-image" data-aos="fade-left">
-        <img
-          src="../screenshots/interface-preview.png"
-          alt="Auraly Interface"
-        />
-      </div>
     </section>
 
     <section id="app-showcase" class="app-showcase">
@@ -147,7 +144,10 @@
       <div class="showcase-grid">
         <div class="showcase-item" data-aos="fade-up" data-aos-delay="100">
           <div class="showcase-image">
-            <img src="../screenshots/welcome.png" alt="Auraly Welcome Page" />
+            <img
+              src="/app scrennshots/Neutral Minimal Shadow Photographer Frame Mockup Pinterest Pin (3).png"
+              alt="Auraly Welcome Page"
+            />
           </div>
           <h3>Welcome to Auraly</h3>
           <p>
@@ -157,7 +157,7 @@
         <div class="showcase-item" data-aos="fade-up" data-aos-delay="200">
           <div class="showcase-image">
             <img
-              src="../screenshots/search.png"
+              src="/app scrennshots/Neutral Minimal Shadow Photographer Frame Mockup Pinterest Pin (2).png"
               alt="Auraly Search Interface"
             />
           </div>
@@ -168,7 +168,10 @@
         </div>
         <div class="showcase-item" data-aos="fade-up" data-aos-delay="300">
           <div class="showcase-image">
-            <img src="../screenshots/songlist.png" alt="Auraly Song List" />
+            <img
+              src="/app scrennshots/Neutral Minimal Shadow Photographer Frame Mockup Pinterest Pin.png"
+              alt="Auraly Song List"
+            />
           </div>
           <h3>smart song list</h3>
           <p>
