--- a/auraly.html
+++ b/auraly.html
@@ -91,7 +91,7 @@
       </div>
       <div class="hero-image" data-aos="fade-left">
         <img
-          src="/app scrennshots/Neutral Beige Aesthetic Fashion Mockup Instagram Story.png"
+          src="app scrennshots/Neutral Beige Aesthetic Fashion Mockup Instagram Story.png"
           alt="Auraly App Preview"
         />
       </div>
@@ -145,7 +145,7 @@
         <div class="showcase-item" data-aos="fade-up" data-aos-delay="100">
           <div class="showcase-image">
             <img
-              src="/app scrennshots/Neutral Minimal Shadow Photographer Frame Mockup Pinterest Pin (3).png"
+              src="app scrennshots/Neutral Minimal Shadow Photographer Frame Mockup Pinterest Pin (3).png"
               alt="Auraly Welcome Page"
             />
           </div>
@@ -157,7 +157,7 @@
         <div class="showcase-item" data-aos="fade-up" data-aos-delay="200">
           <div class="showcase-image">
             <img
-              src="/app scrennshots/Neutral Minimal Shadow Photographer Frame Mockup Pinterest Pin (2).png"
+              src="app scrennshots/Neutral Minimal Shadow Photographer Frame Mockup Pinterest Pin (2).png"
               alt="Auraly Search Interface"
             />
           </div>
@@ -169,7 +169,7 @@
         <div class="showcase-item" data-aos="fade-up" data-aos-delay="300">
           <div class="showcase-image">
             <img
-              src="/app scrennshots/Neutral Minimal Shadow Photographer Frame Mockup Pinterest Pin.png"
+              src="app scrennshots/Neutral Minimal Shadow Photographer Frame Mockup Pinterest Pin.png"
               alt="Auraly Song List"
             />
           </div>
