--- a/search.html
+++ b/search.html
@@ -12,7 +12,8 @@
     <script>
       // Update the navigation event listeners
       window.addEventListener("popstate", function (event) {
-        handleBackNavigation();
+        const currentSection = getCurrentSection();
+        if (currentSection) showSection(currentSection);
       });
 
       // Helper function to get current section
@@ -22,56 +23,6 @@
             document.getElementById(section + "Section").style.display ===
             "block"
         );
-      }
-
-      function generatePastelColor() {
-        // Predefined aesthetic color combinations (hue, saturation, lightness)
-        const aestheticColors = [
-          [25, 35, 95], // Soft peach
-          [180, 25, 93], // Pale cyan
-          [280, 20, 94], // Soft lavender
-          [150, 30, 94], // Mint green
-          [330, 25, 94], // Light pink
-          [45, 30, 94], // Cream yellow
-          [200, 25, 95], // Baby blue
-          [0, 25, 95], // Shell pink
-          [80, 25, 94], // Sage green
-          [320, 20, 95], // Rose mist
-        ];
-
-        // Pick a random color combination
-        const color =
-          aestheticColors[Math.floor(Math.random() * aestheticColors.length)];
-        return `hsl(${color[0]}, ${color[1]}%, ${color[2]}%)`;
-      }
-
-      function updateThemeColor() {
-        const newColor = generatePastelColor();
-        document.body.style.backgroundColor = newColor;
-        document.documentElement.style.setProperty("--theme-color", newColor);
-
-        const elements = document.querySelectorAll(
-          "#searchInput, #searchButton, .nav-btn, .nav-links"
-        );
-        elements.forEach((el) => {
-          el.style.backgroundColor = newColor;
-        });
-
-        const playlistContainers = document.querySelectorAll(
-          ".playlist-container, .playlist-section"
-        );
-        playlistContainers.forEach((el) => {
-          el.style.backgroundColor = newColor;
-          // The filter: brightness(93%) is handled in CSS
-        });
-
-        const playlistButtons = document.querySelectorAll(
-          ".playlist-btn, .playlist-link"
-        );
-        playlistButtons.forEach((el) => {
-          el.style.backgroundColor = newColor;
-          // The filter: brightness(88%) is handled in CSS
-        });
       }
     </script>
     <div class="app-logo" onclick="showSection('home')">
@@ -200,56 +151,19 @@
     ></script>
     <script>
       let currentPlayingSong = null;
-      let currentPlayingContainer = null;
       let currentPlayingSongId = null;
       let currentAlbumCover = null;
-
-      function getLightColor() {
-        // Your specified colors for page background
-        const lightColors = [
-          "#A0937D",
-          "#D2E0FB",
-          "#DEE5D4",
-          "#CCE0AC",
-          "#CCD5AE",
-          "#E0E5B6",
-          "#E7D4B5",
-          "#F6E6CB",
-          "#B5C18E",
-          "#E5DDC5",
-          "#CCD3CA",
-          "#D7E4C0",
-          "#C6DCBA",
-          "#BBC3A4",
-          "#FFF8E3",
-          "#F5EEE6",
-          "#EAECCC",
-          "#DED0B6",
-          "#E5D4FF",
-          "#F7EFE5",
-          "#D6C7AE",
-          "#BFB29E",
-        ];
-        return lightColors[Math.floor(Math.random() * lightColors.length)];
-      }
-
-      function hexToRgb(hex) {
-        var result = /^#?([a-f\d]{2})([a-f\d]{2})([a-f\d]{2})$/i.exec(hex);
-        return result
-          ? {
-              r: parseInt(result[1], 16),
-              g: parseInt(result[2], 16),
-              b: parseInt(result[3], 16),
-            }
-          : null;
-      }
+      let isDragging = false;
+      let searchInput;
 
       async function performSearch(query) {
+        console.log("Starting search with query:", query);
         const mainContent = document.getElementById("mainContent");
         const songsContainer = document.getElementById("songsContainer");
         const songDetailsPanel = document.getElementById("songDetailsPanel");
 
         if (!query.trim()) {
+          console.log("Empty query, returning");
           mainContent.classList.remove("has-results");
           songsContainer.classList.remove("visible");
           return;
@@ -265,13 +179,24 @@
             },
           };
 
+          console.log("Fetching data from API...");
           const response = await fetch(
             `https://deezerdevs-deezer.p.rapidapi.com/search?q=${encodeURIComponent(
               query
             )}`,
             options
           );
+
+          if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+          }
+
           const data = await response.json();
+          console.log("API response:", data);
+
+          if (!data || !data.data) {
+            throw new Error("Invalid response data");
+          }
 
           // Change page background color using your specified colors
           const newColor = getLightColor();
@@ -285,7 +210,6 @@
           const playlistButtons = document.querySelectorAll(".playlist-btn");
           playlistButtons.forEach((btn) => {
             btn.style.transition = "background-color 0.5s ease-in-out";
-            // Convert hex to RGB, darken it, and convert back to hex
             const rgb = hexToRgb(newColor);
             const darkerColor = `rgb(${Math.max(0, rgb.r - 30)}, ${Math.max(
               0,
@@ -337,21 +261,28 @@
           mainContent.classList.remove("has-results");
           songsContainer.classList.remove("visible");
           console.error("Search error:", error);
+          alert("Failed to search for songs. Please try again later.");
         }
       }
 
-      function getNextSongId(currentId) {
-        const currentIndex = parseInt(currentId.split("-")[1]);
-        const nextElement = document.getElementById(`song-${currentIndex + 1}`);
-        return nextElement ? `song-${currentIndex + 1}` : null;
-      }
-
       function togglePlay(songId, albumCover) {
+        console.log("Attempting to play/pause song:", songId);
         const songElement = document.getElementById(songId);
-        if (!songElement) return;
+        if (!songElement) {
+          console.error("Song element not found:", songId);
+          return;
+        }
 
         const audioElement = songElement.querySelector(".audio-element");
-        const songDetailsPanel = document.getElementById("songDetailsPanel");
+        if (!audioElement) {
+          console.error("Audio element not found in song:", songId);
+          return;
+        }
+
+        console.log(
+          "Current audio state:",
+          audioElement.paused ? "paused" : "playing"
+        );
 
         if (currentPlayingSong && currentPlayingSong !== audioElement) {
           currentPlayingSong.pause();
@@ -389,15 +320,7 @@
             currentPlayingSongId = null;
             currentAlbumCover = null;
             updatePlayPauseButton(false);
-            const currentIndex = parseInt(songId.split("-")[1]);
-            const nextSongElement = document.getElementById(
-              `song-${currentIndex + 1}`
-            );
-
-            if (nextSongElement) {
-              const nextAlbumCover = nextSongElement.querySelector("img").src;
-              togglePlay(`song-${currentIndex + 1}`, nextAlbumCover);
-            }
+            playNextSong();
           });
 
           audioElement.addEventListener("timeupdate", () => {
@@ -410,9 +333,6 @@
           songElement.classList.remove("playing");
           songElement.querySelector(".info-icon").style.display = "none";
           updatePlayPauseButton(false);
-          if (!isMobileDevice()) {
-            songDetailsPanel.classList.remove("active");
-          }
         }
       }
 
@@ -469,30 +389,6 @@
           const nextAlbumCover = nextSong.querySelector("img").src;
           togglePlay(nextSongId, nextAlbumCover);
         }
-      }
-
-      function playPreviousSong() {
-        const currentSong = document.querySelector(".song.playing");
-        if (!currentSong) return;
-
-        const previousSong = currentSong.previousElementSibling;
-        if (previousSong && previousSong.classList.contains("song")) {
-          const previousSongId = previousSong.id;
-          const previousAlbumCover = previousSong.querySelector("img").src;
-          togglePlay(previousSongId, previousAlbumCover);
-        }
-      }
-
-      function showNotification(message, isError = false) {
-        const notification = document.getElementById("notification");
-        notification.textContent = message;
-        notification.style.background = isError
-          ? "#ff4444"
-          : "rgba(0, 0, 0, 0.8)";
-        notification.style.display = "block";
-        setTimeout(() => {
-          notification.style.display = "none";
-        }, 3000);
       }
 
       function showSection(section) {
@@ -573,12 +469,111 @@
         }, 50);
       }
 
-      // Event Listeners
+      function getLightColor() {
+        // Your specified colors for page background
+        const lightColors = [
+          "#EEE0CA",
+          "#E1CCB7",
+          "#DDBEA5",
+          "#E5DFC3",
+          "#DDC6C6",
+          "#D2A993",
+          "#B1AC7A",
+          "#EFEDC3",
+          "#CCCCCC",
+          "#9E8977",
+          "#A4A191",
+          "#B2B1A9",
+          "#BDBEBA",
+          "#F2F2F1",
+          "#C6C1BB",
+        ];
+        return lightColors[Math.floor(Math.random() * lightColors.length)];
+      }
+
+      function hexToRgb(hex) {
+        var result = /^#?([a-f\d]{2})([a-f\d]{2})([a-f\d]{2})$/i.exec(hex);
+        return result
+          ? {
+              r: parseInt(result[1], 16),
+              g: parseInt(result[2], 16),
+              b: parseInt(result[3], 16),
+            }
+          : null;
+      }
+
+      function calculateProgress(current, duration) {
+        return (current / duration) * 100;
+      }
+
+      function updateSideProgress(audio) {
+        console.log("Updating progress");
+        if (!progressBar || !currentTimeEl || !durationTimeEl) {
+          console.warn("Progress bar elements not found:", {
+            progressBar: !!progressBar,
+            currentTimeEl: !!currentTimeEl,
+            durationTimeEl: !!durationTimeEl,
+          });
+          return;
+        }
+
+        if (!audio || !Number.isFinite(audio.duration)) {
+          console.warn("Invalid audio duration");
+          return;
+        }
+
+        const current = audio.currentTime;
+        const duration = audio.duration;
+        const progressPercent = calculateProgress(current, duration);
+        console.log("Progress:", { current, duration, progressPercent });
+
+        progressBar.style.width = `${progressPercent}%`;
+        currentTimeEl.textContent = formatTime(current);
+        durationTimeEl.textContent = formatTime(duration);
+      }
+
+      function formatTime(seconds) {
+        const minutes = Math.floor(seconds / 60);
+        const remainingSeconds = Math.floor(seconds % 60);
+        return `${minutes}:${remainingSeconds.toString().padStart(2, "0")}`;
+      }
+
+      function updateProgressFromEvent(e) {
+        if (!currentPlayingSong) return;
+        const progressRect = document
+          .querySelector(".side-progress")
+          .getBoundingClientRect();
+        const x = e.clientX || (e.touches && e.touches[0].clientX) || 0;
+        const clickPosition = Math.max(
+          0,
+          Math.min(1, (x - progressRect.left) / progressRect.width)
+        );
+        currentPlayingSong.currentTime =
+          clickPosition * currentPlayingSong.duration;
+        updateSideProgress(currentPlayingSong);
+      }
+
+      function handleSearch() {
+        if (!searchInput) {
+          searchInput = document.getElementById("searchInput");
+        }
+        const query = searchInput.value.trim();
+        if (query) performSearch(query);
+      }
+
+      // Cache progress bar elements
+      let progressBar, currentTimeEl, durationTimeEl;
+
       document.addEventListener("DOMContentLoaded", () => {
+        // Cache progress elements
+        progressBar = document.querySelector(".side-progress-bar");
+        currentTimeEl = document.querySelector(".current-time");
+        durationTimeEl = document.querySelector(".duration-time");
+        searchInput = document.getElementById("searchInput");
+
         // Set home as active by default
         showSection("home");
 
-        const searchInput = document.getElementById("searchInput");
         const searchButton = document.getElementById("searchButton");
 
         // Progress bar drag functionality
@@ -594,17 +589,7 @@
           document.addEventListener("mousemove", function (e) {
             if (isDragging && currentPlayingSong) {
               e.preventDefault(); // Prevent text selection while dragging
-              const progressRect = progressContainer.getBoundingClientRect();
-              const clickPosition = Math.max(
-                0,
-                Math.min(
-                  1,
-                  (e.clientX - progressRect.left) / progressRect.width
-                )
-              );
-              currentPlayingSong.currentTime =
-                clickPosition * currentPlayingSong.duration;
-              updateSideProgress(currentPlayingSong);
+              updateProgressFromEvent(e);
             }
           });
 
@@ -615,25 +600,13 @@
           // Also handle touch events for mobile
           progressContainer.addEventListener("touchstart", function (e) {
             isDragging = true;
-            const touch = e.touches[0];
-            updateProgressFromEvent(touch);
+            updateProgressFromEvent(e.touches[0]);
           });
 
           document.addEventListener("touchmove", function (e) {
             if (isDragging && currentPlayingSong) {
               e.preventDefault();
-              const touch = e.touches[0];
-              const progressRect = progressContainer.getBoundingClientRect();
-              const clickPosition = Math.max(
-                0,
-                Math.min(
-                  1,
-                  (touch.clientX - progressRect.left) / progressRect.width
-                )
-              );
-              currentPlayingSong.currentTime =
-                clickPosition * currentPlayingSong.duration;
-              updateSideProgress(currentPlayingSong);
+              updateProgressFromEvent(e.touches[0]);
             }
           });
 
@@ -644,69 +617,16 @@
           // Simple click to seek
           progressContainer.addEventListener("click", function (e) {
             if (currentPlayingSong) {
-              const progressRect = progressContainer.getBoundingClientRect();
-              const clickPosition =
-                (e.clientX - progressRect.left) / progressRect.width;
-              currentPlayingSong.currentTime =
-                Math.max(0, Math.min(1, clickPosition)) *
-                currentPlayingSong.duration;
+              updateProgressFromEvent(e);
             }
           });
         }
 
-        searchButton.addEventListener("click", () => {
-          const query = searchInput.value.trim();
-          if (query) performSearch(query);
-        });
+        searchButton.addEventListener("click", handleSearch);
 
         searchInput.addEventListener("keypress", (e) => {
-          if (e.key === "Enter") {
-            const query = searchInput.value.trim();
-            if (query) performSearch(query);
-          }
+          if (e.key === "Enter") handleSearch();
         });
-      });
-
-      function updateSideProgress(audio) {
-        const progressBar = document.querySelector(".side-progress-bar");
-        const currentTime = document.querySelector(".current-time");
-        const durationTime = document.querySelector(".duration-time");
-
-        if (!progressBar || !currentTime || !durationTime || !audio.duration)
-          return;
-
-        const current = audio.currentTime;
-        const duration = audio.duration;
-        const progressPercent = (current / duration) * 100;
-
-        progressBar.style.width = `${progressPercent}%`;
-        currentTime.textContent = formatTime(current);
-        durationTime.textContent = formatTime(duration);
-      }
-
-      function formatTime(seconds) {
-        const minutes = Math.floor(seconds / 60);
-        const remainingSeconds = Math.floor(seconds % 60);
-        return `${minutes}:${remainingSeconds.toString().padStart(2, "0")}`;
-      }
-
-      // Add this to your togglePlay function where you play the audio
-      let isDragging = false;
-      const progressContainer = document.querySelector(".side-progress");
-
-      progressContainer.addEventListener("mousedown", (e) => {
-        isDragging = true;
-        updateProgressFromEvent(e);
-      });
-
-      document.addEventListener("mousemove", (e) => {
-        if (isDragging && currentPlayingSong) {
-          updateProgressFromEvent(e);
-        }
-      });
-
-      document.addEventListener("mouseup", () => {
-        isDragging = false;
       });
     </script>
     <!-- Update the song details panel HTML structure -->
