--- a/auraly.html
+++ b/auraly.html
@@ -42,9 +42,9 @@
         </p>
         <div class="cta-buttons">
           <a
-            href="#download"
+            href="download.html"
             class="cta-button download-btn"
-            data-hover="Get the full experience"
+            data-hover="Get it on mobile"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -67,6 +67,7 @@
             href="search.html"
             class="cta-button web-btn"
             data-hover="Try it in your browser"
+            target="_blank"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -189,9 +190,9 @@
       </p>
       <div class="cta-buttons2">
         <a
-          href="#download"
+          href="download.html"
           class="cta-button download-btn"
-          data-hover="Get the full experience"
+          data-hover="Get it on mobile"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
