--- a/privacy.html
+++ b/privacy.html
@@ -16,11 +16,6 @@
           <span>Auraly</span>
         </a>
       </div>
-      <div class="nav-links">
-        <a href="auraly.html#features">Features</a>
-        <a href="auraly.html#about">About</a>
-        <a href="auraly.html#download">Download</a>
-      </div>
     </nav>
 
     <div class="legal-content">
@@ -89,8 +84,10 @@
     <footer>
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="icons/icons8-logo-50.svg" alt="Auraly Logo" />
-          <span>Auraly</span>
+          <a href="auraly.html">
+            <img src="icons/icons8-logo-50.svg" alt="Auraly Logo" />
+            <span>Auraly</span>
+          </a>
         </div>
         <div class="footer-links">
           <a href="privacy.html">Privacy Policy</a>
