--- a/search.html
+++ b/search.html
@@ -26,7 +26,9 @@
       }
     </script>
     <div class="app-logo" onclick="showSection('home')">
-      <img src="icons/adaptive-favicon.svg" alt="Auraly Logo" />
+      <a href="auraly.html">
+        <img src="icons/adaptive-favicon.svg" alt="Auraly Logo" />
+      </a>
     </div>
     <div class="container">
       <div id="homeSection" class="home-section">
