--- a/search.html
+++ b/search.html
@@ -10,6 +10,20 @@
     <meta name="theme-color" content="#EEE0CA" />
     <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" href="icons/adaptive-favicon.svg" />
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function () {
+          navigator.serviceWorker
+            .register("./sw.js")
+            .then(function (registration) {
+              console.log("ServiceWorker registration successful");
+            })
+            .catch(function (err) {
+              console.log("ServiceWorker registration failed: ", err);
+            });
+        });
+      }
+    </script>
   </head>
   <body>
     <script>
