--- a/terms.html
+++ b/terms.html
@@ -3,157 +3,95 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="icons/adaptive-favicon.svg" />
-    <link rel="icon" type="image/svg+xml" href="icons/icons8-logo-50.svg" />
     <title>Terms of Service - Auraly</title>
     <link rel="stylesheet" href="auraly.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar">
       <div class="nav-logo">
-        <a href="auraly.html">
-          <img src="icons/icons8-logo-500.svg" alt="Auraly Logo" />
-          <span>Auraly</span>
-        </a>
+        <img
+          src="icons/icons8-logo-500.svg"
+          alt="Auraly Logo"
+          width="40"
+          height="40"
+        />
+        <span>Auraly</span>
+      </div>
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="nav-links">
+        <a href="#features">Features</a>
+        <a href="#about">About</a>
       </div>
     </nav>
-
-    <div class="legal-content">
+    <main class="legal-content" data-aos="fade-up">
       <h1>Terms of Service</h1>
 
-      <section class="legal-section primary-features">
-        <h2>How to Use Auraly</h2>
-        <p>
-          Welcome to Auraly - a music interface crafted for those who appreciate
-          beautiful design and clean user experiences. Here's what Auraly
-          currently offers:
+      <section class="legal-section" data-aos="fade-up">
+        <h2>Features</h2>
+        <ul>
+          <li>Beautiful, intuitive music interface</li>
+          <li>Simple music search functionality</li>
+          <li>Basic music playback controls</li>
+          <li>Early access to new features</li>
+        </ul>
+        <p class="note">
+          <strong>Note:</strong> Auraly is in early development. Advanced
+          features like playlist saving are coming soon.
         </p>
-
-        <div class="feature-list">
-          <div class="feature-item">
-            <h3>🎨 Beautiful Interface</h3>
-            <p>
-              Experience music through our carefully crafted, aesthetic design.
-              Every element is thoughtfully placed for visual harmony and
-              intuitive interaction.
-            </p>
-          </div>
-          <div class="feature-item">
-            <h3>🔍 Music Search</h3>
-            <p>
-              Search and discover songs through our elegantly designed search
-              interface. Simple, clean, and straightforward.
-            </p>
-          </div>
-          <div class="feature-item">
-            <h3>▶️ Basic Playback</h3>
-            <p>
-              Play music with our minimalist controls. While there might be
-              occasional bugs, we're constantly improving the experience.
-            </p>
-          </div>
-          <div class="feature-item">
-            <h3>⚡ Early Access</h3>
-            <p>
-              You're experiencing Auraly in its early stages. As interface
-              enthusiasts ourselves, we're building this for people who love
-              clean, beautiful design. We'll be adding more features and
-              refinements as we grow.
-            </p>
-          </div>
-        </div>
-
-        <div class="note">
-          <p>
-            <strong>Note:</strong> Auraly is currently focused on providing a
-            beautiful music interface experience. Advanced features like
-            playlist saving are planned for future updates. We appreciate your
-            patience and feedback as we continue to enhance the platform.
-          </p>
-        </div>
       </section>
 
-      <section class="legal-section">
+      <section class="legal-section" data-aos="fade-up">
         <h2>Terms of Use</h2>
-        <p>By using Auraly, you agree to these terms:</p>
         <ul>
-          <li>
-            Auraly is currently a music interface platform - you're responsible
-            for your music files
-          </li>
-          <li>
-            Your playlists and preferences are stored securely in your account
-          </li>
-          <li>We respect your privacy and don't collect unnecessary data</li>
-          <li>
-            Features marked as "coming soon" will be added in future updates
-          </li>
+          <li>You're responsible for your music files</li>
+          <li>Your preferences are stored securely</li>
+          <li>We respect your privacy - no unnecessary data collection</li>
+          <li>Features marked "coming soon" will be added in updates</li>
         </ul>
       </section>
-
-      <section class="legal-section">
-        <h2>Your Rights</h2>
-        <p>As an Auraly user, you have the right to:</p>
-        <ul>
-          <li>Access your music interface from any web browser</li>
-          <li>Create and manage your playlists</li>
-          <li>Request feature improvements or report issues</li>
-          <li>Cancel your account at any time</li>
-        </ul>
-      </section>
-
-      <section class="legal-section">
-        <h2>Our Commitment</h2>
-        <p>We are committed to:</p>
-        <ul>
-          <li>Continuously improving the Auraly interface</li>
-          <li>Adding new features based on user feedback</li>
-          <li>Maintaining a secure and reliable platform</li>
-          <li>Providing clear communication about updates and changes</li>
-        </ul>
-      </section>
-
-      <section class="legal-section">
-        <h2>Legal Notes</h2>
-        <ul>
-          <li>
-            Auraly is provided "as is" while we continue to develop new features
-          </li>
-          <li>We may update these terms as new features are added</li>
-          <li>You must respect copyright laws when using Auraly</li>
-          <li>
-            We reserve the right to suspend accounts that violate these terms
-          </li>
-        </ul>
-      </section>
-
-      <section class="legal-section">
-        <h2>Contact Us</h2>
-        <p>Have questions or suggestions? We'd love to hear from you!</p>
-        <p>Email: support@auraly.com</p>
-      </section>
-    </div>
+    </main>
 
     <footer>
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="icons/icons8-logo-50.svg" alt="Auraly Logo" />
+          <img src="assets/auraly-logo.png" alt="Auraly Logo" height="30" />
           <span>Auraly</span>
         </div>
         <div class="footer-links">
           <a href="privacy.html">Privacy Policy</a>
           <a href="terms.html">Terms of Service</a>
-          <a href="#contact">Contact Us</a>
-        </div>
-        <div class="footer-social">
-          <a href="#"><img src="images/facebook.svg" alt="Facebook" /></a>
-          <a href="#"><img src="images/twitter.svg" alt="Twitter" /></a>
-          <a href="#"><img src="images/instagram.svg" alt="Instagram" /></a>
         </div>
       </div>
       <div class="footer-bottom">
         <p>&copy; 2024 Auraly. All rights reserved.</p>
       </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 800,
+        offset: 50,
+        once: true,
+      });
+
+      // Mobile menu toggle
+      const hamburger = document.querySelector(".hamburger");
+      const navLinks = document.querySelector(".nav-links");
+
+      hamburger.addEventListener("click", () => {
+        navLinks.classList.toggle("active");
+        hamburger.classList.toggle("active");
+      });
+    </script>
   </body>
 </html>
