--- a/privacy.html
+++ b/privacy.html
@@ -5,104 +5,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy - Auraly</title>
     <link rel="stylesheet" href="auraly.css" />
-    <link rel="icon" type="image/svg+xml" href="icons/adaptive-favicon.svg" />
-    <link rel="icon" type="image/svg+xml" href="icons/icons8-logo-50.svg" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar">
       <div class="nav-logo">
-        <a href="auraly.html">
-          <img src="icons/icons8-logo-500.svg" alt="Auraly Logo" />
-          <span>Auraly</span>
-        </a>
+        <img
+          src="icons/icons8-logo-500.svg"
+          alt="Auraly Logo"
+          width="40"
+          height="40"
+        />
+        <span>Auraly</span>
+      </div>
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="nav-links">
+        <a href="#features">Features</a>
+        <a href="#about">About</a>
       </div>
     </nav>
 
-    <div class="legal-content">
+    <main class="legal-content" data-aos="fade-up">
       <h1>Privacy Policy</h1>
 
-      <section class="legal-section">
-        <h2>Our Commitment to Privacy</h2>
+      <section class="legal-section" data-aos="fade-up">
+        <h2>Our Privacy Commitment</h2>
         <p>
-          At Auraly, we believe in absolute privacy. We don't collect any
-          personal information, period. Our app is designed for music lovers who
-          want to enjoy their music without worrying about data collection or
-          tracking.
+          At Auraly, we prioritize your privacy. We don't collect personal
+          information or track your usage. Our app is designed for pure music
+          enjoyment without data collection.
         </p>
-      </section>
-
-      <section class="legal-section">
-        <h2>Zero Data Collection</h2>
-        <p>We want to be crystal clear:</p>
         <ul>
-          <li>We don't collect any personal information</li>
-          <li>We don't track your listening habits</li>
-          <li>We don't store any user data</li>
-          <li>We don't use cookies or tracking technologies</li>
-          <li>We don't share any information because we don't collect any</li>
+          <li>No personal information collection</li>
+          <li>No tracking of listening habits</li>
+          <li>No cookies or tracking technologies</li>
+          <li>No data sharing</li>
         </ul>
       </section>
 
-      <section class="legal-section">
-        <h2>Just Music, Nothing Else</h2>
+      <section class="legal-section" data-aos="fade-up">
+        <h2>Contact Us</h2>
         <p>
-          Auraly is all about the music. We focus on providing the best music
-          experience possible without any unnecessary data collection. Your
-          privacy is not just a priority - it's our foundation.
+          Questions or feedback? Email us at feedback@auraly.com or connect with
+          us on social media.
         </p>
       </section>
-
-      <section class="legal-section">
-        <h2>Share Your Thoughts</h2>
-        <p>
-          We love hearing from our users! If you enjoy using Auraly or have
-          ideas for improvements, please share them with us. Your feedback helps
-          us make Auraly even better for everyone.
-        </p>
-        <p>You can reach us in several ways:</p>
-        <ul>
-          <li>Email us at feedback@auraly.com</li>
-          <li>Connect with us on social media</li>
-          <li>Join our community discussions</li>
-        </ul>
-        <p>
-          Whether it's a feature request, a bug report, or just to say hello -
-          we're always excited to hear from our users!
-        </p>
-      </section>
-
-      <section class="legal-section">
-        <h2>Download & Enjoy</h2>
-        <p>
-          That's all there is to our privacy policy! No complicated terms, no
-          data collection, just pure music enjoyment. Download Auraly today and
-          experience music the way it should be - private and personal.
-        </p>
-      </section>
-    </div>
+    </main>
 
     <footer>
       <div class="footer-content">
         <div class="footer-logo">
-          <a href="auraly.html">
-            <img src="icons/icons8-logo-50.svg" alt="Auraly Logo" />
-            <span>Auraly</span>
-          </a>
+          <img src="assets/auraly-logo.png" alt="Auraly Logo" height="30" />
+          <span>Auraly</span>
         </div>
         <div class="footer-links">
           <a href="privacy.html">Privacy Policy</a>
           <a href="terms.html">Terms of Service</a>
-          <a href="#contact">Contact Us</a>
-        </div>
-        <div class="footer-social">
-          <a href="#"><img src="images/facebook.svg" alt="Facebook" /></a>
-          <a href="#"><img src="images/twitter.svg" alt="Twitter" /></a>
-          <a href="#"><img src="images/instagram.svg" alt="Instagram" /></a>
+          <a href="#contact">Contact</a>
         </div>
       </div>
       <div class="footer-bottom">
         <p>&copy; 2024 Auraly. All rights reserved.</p>
       </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 800,
+        offset: 50,
+        once: true,
+      });
+
+      // Mobile menu toggle
+      const hamburger = document.querySelector(".hamburger");
+      const navLinks = document.querySelector(".nav-links");
+
+      hamburger.addEventListener("click", () => {
+        navLinks.classList.toggle("active");
+        hamburger.classList.toggle("active");
+      });
+    </script>
   </body>
 </html>
